src/command_modules/azure-cli-vm/azure/cli/command_modules/vm/mgmt_vm_create/nested_templates/nsg_new.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "networkSecurityGroupName": {
      "type": "string"
    },
    "networkSecurityGroupRule": {
      "type": "string"
    }
  },
  "variables": {
    "rules": {
      "RDP": {
        "name": "RDP",
        "properties": {
          "protocol": "*",
          "sourcePortRange": "3389",
          "destinationPortRange": "80",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 1000,
          "direction": "Inbound"
        }
      },
      "SSH": {
        "name": "default-allow-ssh",
        "properties": {
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "22",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 1000,
          "direction": "Inbound"
        }
      }
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroupName')]",
      "apiVersion": "2015-06-15",
      "location": "westus",
      "properties": {
        "securityRules": [
          "[variables('rules')[parameters('networkSecurityGroupRule')]]"
        ]
      },
      "dependsOn": [ ]
    }
  ]
}
